<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="obhs.com.paperlessfeedback.DashboardActivity">

    <!--TextView and Button displayed in First Fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:padding="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/completed_feedback"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="right"
                android:text="20"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/pending_feedback"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="right"
                android:text="20"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="Coach"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/coachSelectionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="Feedback Type"
            android:textSize="20sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu"
                android:text="@string/tt"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu"
                android:text="@string/passenger" />
        </RadioGroup>
    </LinearLayout>
        <Button
            android:id="@+id/takeFeedbackButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:text="@string/take_feedback"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/endTripButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="27dp"
            android:text="@string/end_trip"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>